--- a/Erp8/AkbilYntm/AkbilYonetimiUI/Properties/Resources.resx
+++ b/Erp8/AkbilYntm/AkbilYonetimiUI/Properties/Resources.resx
@@ -121,4 +121,10 @@
   <data name="galata-kulesi" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\galata-kulesi.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="png-transparent-checkbox-computer-icons-green-tick-mark-text-trademark-logo" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\png-transparent-checkbox-computer-icons-green-tick-mark-text-trademark-logo.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="png-transparent-wrong-incorrect-delete-abort-cancel-remove-red-small-mark-negative" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\png-transparent-wrong-incorrect-delete-abort-cancel-remove-red-small-mark-negative.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
